--- a/sources/tpl/page.header.html
+++ b/sources/tpl/page.header.html
@@ -9,7 +9,7 @@
 {else}
     <a href="?" class="nomobile">Home</a>
     {if="isLoggedIn()"}
-        <a href="?do=logout">Logout</a><a href="?do=tools">Tools</a><a href="?do=addlink"><b>Add link</b></a>
+        <a href="?do=logout">Logout <i>({$currentUser})</i></a><a href="?do=tools">Tools</a><a href="?do=addlink"><b>Add link</b></a>
     {elseif="$GLOBALS['config']['OPEN_SHAARLI']"}
         <a href="?do=tools">Tools</a><a href="?do=addlink"><b>Add link</b></a>
     {else}
